# Magic-Post

./: Cargo.toml  README.md  drawSQL-mysql-export-2023-11-28.sql  form.js  magicpost1.sql  main.htm  package.json  styles1.css
.for_reference/actix_html/: Cargo.toml
backend/: Cargo.toml  data.tsx  magicpost1.sql
backend/.for_reference/todo-actix/: Cargo.toml
frontend/: index.htm  login_api.js  style.css
frontend/public/: index.html  package-lock.json
frontend/public/src/: authProvider.ts
magic_post/.for_reference/actix-mongo-api/: Cargo.toml
magic_post/src/mvc/: mod.rs
src/: App.tsx  data.tsx  main.rs  rest.ts
src/admin/analytic/: DashboardAdmin.tsx
src/admin/manage_account/: PointReferenceField.tsx
src/admin/manage_point/: PointList.tsx
src/exchanging_employee/manage_exchanging_delivery/: DeliveryCreate.tsx  DeliveryShow.tsx
src/exchanging_employee/manage_exchanging_package/: AcceptButton.tsx  CreateDeliveryButton.tsx  PackageCreate.tsx  PackageEdit.tsx  PackageShow.tsx
src/exchanging_manager/analytic/: PackageList.tsx  PackageStatistic.tsx
src/exchanging_manager/manage_account/: EmployeeAccountCreate.tsx  EmployeeAccountEdit.tsx
src/fakeServer/: rest.ts
src/gathering_employee/manage_gathering_delivery/: DeliveryCreate.tsx  DeliveryShow.tsx  ListDetail.tsx
src/gathering_employee/manage_gathering_package/: CreateDeliveryButton.tsx  EditPackageButton.tsx  PackageShow.tsx  RejectButton.tsx  ViewReceiptButton.tsx
src/layout/: AppBarToolbar.tsx  Login.tsx  Menu.tsx
src/mvc/: controller.rs  mod.rs  models.rs  view.rs
(+61 files in other folders)
