[package]
name = "magic_post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "^1", features = ["derive"] }
r2d2 = "0.8.10"
r2d2_mysql = "24"
bcrypt = "0.15"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
actix-cors = "0.6.5"