[package]
name = "actix-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.188"
dotenv = "0.15.0"
futures = "0.3"

[dependencies.mongodb]
version = "2.6.1"
default-features = false
features = ["async-std-runtime"]